--- a/locationMap.xhtml
+++ b/locationMap.xhtml
@@ -17,13 +17,10 @@ function init()
 	var directionsService = new google.maps.DirectionsService();
 	var map;
 	directionsDisplay = new google.maps.DirectionsRenderer();
-
 	 console.log(document.getElementById('tracker:city').innerHTML);
 var geocoder = new google.maps.Geocoder();
 var address = document.getElementById('tracker:city').innerHTML;
-
 geocoder.geocode( { 'address': address}, function(results, status) {
-
   if (status == google.maps.GeocoderStatus.OK) {
     var latitude = results[0].geometry.location.lat();
     var longitude = results[0].geometry.location.lng();
@@ -44,9 +41,16 @@ geocoder.geocode( { 'address': address}, function(results, status) {
     map.infowindow = new google.maps.InfoWindow({
         content: '<h3>' + data.title + '</h3>'
     });
-
     map.getMap().setCenter(coords);
     map.infowindow.open(map.getMap(), marker);
+    var map = new google.maps.Map(document.getElementById('tracker:gmap'), {
+        zoom: 7,
+        center: coords,
+        mapTypeId:google.maps.MapTypeId.ROAD,
+      });
+   
+      directionsDisplay.setMap(map);
+
     directionsDisplay.setMap(map);
     directionsDisplay.setPanel(document.getElementById('tracker:panel'));
   } 
@@ -64,7 +68,6 @@ geocoder.geocode( { 'address': address}, function(results, status) {
 	        }
 	      });
 }); 
-
 
 }
 
@@ -103,11 +106,11 @@ geocoder.geocode( { 'address': address}, function(results, status) {
 
 </p:panelGrid>
 <p:panelGrid>
-<p:gmap style="width:80%;height:15em;margin-left:15%" zoom="15" type="HYBRID"  widgetVar="wmap"/>
+<p:gmap id="gmap" style="width:80%;height:300px;margin-left:15%" zoom="15" type="HYBRID"  widgetVar="wmap"/>
 
 </p:panelGrid>
 <p:panelGrid>
-<p:gmap id="panel" style="width:80%;height:1em;margin-left:15%" zoom="15" type="HYBRID"  widgetVar="wpanel"/>
+<p:gmap id="panel" style="width:80%;height:0px;margin-top:5%;margin-left:15%" zoom="15" type="HYBRID"  widgetVar="wpanel"/>
 
 </p:panelGrid>
 
